update index page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main id="content">
-        <h2>Welcome to the Conference</h2>
-        <p>Join us for an exciting event featuring top speakers, insightful sessions, and networking opportunities.</p>
+    <main id="content" hx-get="partials/home.html" hx-trigger="load">
     </main>
     <footer>
         <p>&copy; 2024 Conference Name</p>
