--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <header>
+      <div class="top-bar">
         <div class="logo-container">
             <img src="images/logo.png" alt="Conference Logo" class="logo">
         </div>
+      <div class="language-selector">
+        <a href="en/index.html"><img src="/images/flag-en.png" class="language-flag"></a>
+            </div>
+      </div>
         <div class="navbar-container">
             <nav>
                 <ul>
