--- a/en/index.html
+++ b/en/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
     <header>
+
       <div class="top-bar">
         <div class="logo-container">
             <img src="/images/logo.png" alt="Conference Logo" class="logo">
         </div>
       <div class="language-selector">
-                  <a href="/index.html"><img src="/images/flag-is.png" class="language-flag"></a>
+        <a href="/index.html"><img src="/images/flag-is.png" class="language-flag"></a>
             </div>
-        </div>
-        <div class="navbar-container">
+        <br>
+        <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">≡</div>
+      </div>
+        <div class="navbar-container" id="navbar">
             <nav>
                 <ul>
                     <li><a href="index.html" hx-get="/en/partials/home.html" hx-trigger="click" hx-target="#content">Home</a></li>
@@ -34,6 +37,25 @@
     <footer>
         <p>&copy; 2024 Hampur Fyrir Framtíðina</p>
     </footer>
+    <script>
+function toggleMenu() {
+            const navbar = document.getElementById('navbar');
+            if (navbar.style.display === 'block') {
+                navbar.style.display = 'none';
+            } else {
+                navbar.style.display = 'block';
+            }
+        }
+
+        window.addEventListener('resize', function() {
+            const navbar = document.getElementById('navbar');
+            if (window.innerWidth > 768) {
+                navbar.style.display = 'block';
+            } else {
+                navbar.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
 
