Icelandic menu in Icelandic

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="navbar-container" id="navbar">
             <nav>
                 <ul>
-                    <li><a href="index.html" hx-get="/partials/home.html" hx-trigger="click" hx-target="#content">Home</a></li>
-                    <li><a href="speakers.html" hx-get="/partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a></li>
-                    <li><a href="schedule.html" hx-get="/partials/schedule.html" hx-trigger="click" hx-target="#content">Schedule</a></li>
-                    <li><a href="venue.html" hx-get="/partials/venue.html" hx-trigger="click" hx-target="#content">Venue</a></li>
-                    <li><a href="media.html" hx-get="/partials/media.html" hx-trigger="click" hx-target="#content">Media</a></li>
+                    <li><a href="index.html" hx-get="/partials/home.html" hx-trigger="click" hx-target="#content">Heim</a></li>
+                    <li><a href="speakers.html" hx-get="/partials/speakers.html" hx-trigger="click" hx-target="#content">Mælendur</a></li>
+                    <li><a href="schedule.html" hx-get="/partials/schedule.html" hx-trigger="click" hx-target="#content">Dagskrá</a></li>
+                    <li><a href="venue.html" hx-get="/partials/venue.html" hx-trigger="click" hx-target="#content">Staðsetning</a></li>
+                    <li><a href="media.html" hx-get="/partials/media.html" hx-trigger="click" hx-target="#content">Miðlar</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +38,7 @@
         <p>&copy; 2024 Hampur Fyrir Framtíðina</p>
     </footer>
     <script>
-function toggleMenu() {
+        function toggleMenu() {
             const navbar = document.getElementById('navbar');
             if (navbar.style.display === 'block') {
                 navbar.style.display = 'none';
