--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conference Name</title>
+    <title>Hampur fyrir Framtíðina</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 </head>
