update bios, add images, update home

--- a/speakers/jasna.html
+++ b/speakers/jasna.html
@@ -1,3 +1,9 @@
-<h3>Jasna Kovac</h3>
-<p>Is the founder and current president of the MEDCA association - Association of Slovenian
-nurses and other health workers in the field of cannabis treatment</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/jasna.png" alt="Jasna Kovac">
+        </div>
+        <div class="bio-text">
+            <h2>Jasna Kovac</h2>
+    <p>Founder and current president of the MEDCA association - Association of Slovenian nurses and other health workers in the field of cannabis treatments</p>
+        </div>
+    </div>
