--- a/speakers/pavel.html
+++ b/speakers/pavel.html
@@ -1,5 +1,12 @@
-<h3>Dr. Pavel Kubú</h3>
-<h5>P4PTechnology (Plasma for people)</h5>
-<p>Plasma for people have developed a revolutionary blood plasma. Their goal is to
-become a technology leader in the development of affordable and functional
-blood plasma substitutes, parenteral expanders, and nutrition.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/pavel.png" alt="Dr. Pavel Kubú - PhD">
+        </div>
+        <div class="bio-text">
+            <h2>Dr. Pavel Kubúi - CZ</h2>
+    <p>P4PTechnology or Plasma for people have developed a revolutionary blood
+plasma. Their goal is to become a technology leader in the development of
+affordable and functional blood plasma substitutes, parenteral expanders, and
+nutrition.</p>
+        </div>
+    </div>
