--- a/en/index.html
+++ b/en/index.html
@@ -24,6 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" hx-get="/en/partials/home.html" hx-trigger="click" hx-target="#content">Home</a></li>
+                    <li><a href="about.html" hx-get="/en/partials/about.html" hx-trigger="click" hx-target="#content">Um okkur</a></li>
                     <li><a href="speakers.html" hx-get="/en/partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a></li>
                     <li><a href="schedule.html" hx-get="/en/partials/schedule.html" hx-trigger="click" hx-target="#content">Schedule</a></li>
                     <li><a href="venue.html" hx-get="/en/partials/venue.html" hx-trigger="click" hx-target="#content">Venue</a></li>
