--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" hx-get="/partials/home.html" hx-trigger="click" hx-target="#content">Heim</a></li>
+                    <li><a href="about.html" hx-get="/partials/about.html" hx-trigger="click" hx-target="#content">Um okkur</a></li>
                     <li><a href="speakers.html" hx-get="/partials/speakers.html" hx-trigger="click" hx-target="#content">Mælendur</a></li>
                     <li><a href="schedule.html" hx-get="/partials/schedule.html" hx-trigger="click" hx-target="#content">Dagskrá</a></li>
                     <li><a href="venue.html" hx-get="/partials/venue.html" hx-trigger="click" hx-target="#content">Staðsetning</a></li>
