--- a/speakers/bozidar.html
+++ b/speakers/bozidar.html
@@ -1,7 +1,10 @@
-<h3>Bozidar Radisic </h3>
-<h5>Project Manager and founder of Research and Nature Institute, Medical
-data</h5>
-<p>Bozidar is a representative of ONEJ in network of NGO&#39;s in the field of drugs in
-Slovenia and a member of IACM – International Association for Cannabinoid Medicines.
-He does regular lectures and participates at seminars and other events on cannabis in
-Slovenia and abroad.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/bodizar.png" alt="Bozidar Radisic">
+        </div>
+        <div class="bio-text">
+<h2>Bozidar Radisic </h2>
+    <p> Project Manager and founder of Research and Nature Institute, Medical data . Bozidar is a representative of ONEJ in network of NGO's in the field of drugs in Slovenia and a member of IACM – International Association for Cannabinoid Medicines. </p>
+        </div>
+    </div>
+
