--- a/speakers/jeremy.html
+++ b/speakers/jeremy.html
@@ -1,3 +1,9 @@
-<h3>Jeremy Hail</h3>
-<h5>Scholar Practitioner, Sustainable Systems Management, Remediation Consultant, Life Cycle
-Analysis</h5>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/jeremy.png" alt="Jeremy Hail">
+        </div>
+        <div class="bio-text">
+<h2>Jeremy Hail</h2>
+    <p>Scholar Practitioner, Sustainable Systems Management, Remediation Consultant, Life Cycle Analysis. Jeremy Hale is an entrepreneur and independent researcher who has consulted with numerous organizations collaborating government policy and university research to support the redevelopment of communities around the world.</p>
+        </div>
+    </div>
