--- a/speakers/lumir.html
+++ b/speakers/lumir.html
@@ -1,4 +1,9 @@
-<h3>Lumir Ondrey Hanús</h3>
-<p>Professor Lumír Hanuš, a native of the Czech Republic, is an expert analytical chemist and a leading
-authority in the field of medical cannabis research at the Hebrew University of Jerusalem. His award-
-winning research serves as the basis for much of what we know about the plant today.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/lumir.png" alt="Lumír Ondrey  Hanús">
+        </div>
+        <div class="bio-text">
+<h2>Lumír Ondrey  Hanús</h2>
+    <p>Professor Lumír Hanuš, a native of the Czech Republic, is an expert analytical chemist and a leading authority in the field of medical cannabis research at the Hebrew University of Jerusalem. His award-winning research serves as the basis for much of what we know about the plant today.</p>
+        </div>
+    </div>
