--- a/speakers/magnus.html
+++ b/speakers/magnus.html
@@ -1,10 +1,9 @@
-<h3>Magnus Thorsson</h3>
-<h5>Economics</h5>
-<p>Magnus Thorsson, PhD, is a professor of entrepreneurship at Johnson &amp; Wales
-University, celebrated for launching the world&#39;s first Bachelor of Science degree in
-Cannabis Entrepreneurship in 2021. This innovative program combines cannabis science
-with business acumen, equipping students for various roles in the cannabis industry,
-including cultivation, value creation, and retail. Dr. Thorsson holds a PhD from Iowa
-State University and an MAT from Bennington College, and his research spans
-behavioural economics and consumer preferences, with a focus on consumer motivations
-for cannabis consumption.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/magnus.png" alt="Mangnús Þórsson">
+        </div>
+        <div class="bio-text">
+<h2>Dr. Mangnús Þórsson</h2>
+    <p>Magnus Thorsson, PhD, is a professor of entrepreneurship at Johnson & Wales University, celebrated for launching the world's first Bachelor of Science degree in Cannabis Entrepreneurship in 2021. </p>
+        </div>
+    </div>
