--- a/speakers/nando.html
+++ b/speakers/nando.html
@@ -1,5 +1,9 @@
-<h3>Nando Knodel</h3>
-<p>Nando holds a B.Sc. and M.Sc. in Business Administration and Economics from Hamburg
-&amp; Kyoto University, with a focus on social entrepreneurship, and is the Co-Founder and
-Co-Managing Director of CarbonConnect GmbH and the author of the Report &#39;Carbon
-in Hemp - Explained&#39; published on HempToday.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/nando.png" alt="Nando Knodel">
+        </div>
+        <div class="bio-text">
+<h2>Nando Knodel</h2>
+    <p>Nando holds a B.Sc. and M.Sc. in Business Administration and Economics from Hamburg & Kyoto University, with a focus on social entrepreneurship, and is the Co-Founder and Co-Managing Director of CarbonConnect GmbH and the author of the Report <a href="https://form.typeform.com/to/X9qAApP2">'Carbon in Hemp - Explained'</a> published on HempToday.</p>
+        </div>
+    </div>
