--- a/speakers/rene.html
+++ b/speakers/rene.html
@@ -1,2 +1,9 @@
-<h3>Rene Zex</h3>
-<h5>Medical Cannabis &amp; opioids Head of sales Weeco Pharmaceuticals</h5>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/rene.png" alt="Rene Zex">
+        </div>
+        <div class="bio-text">
+<h2>Rene Zex</h2>
+    <p>Medical Cannabis & opioids Head of sales Weeco Pharmaceuticals</p>
+        </div>
+    </div>
