--- a/speakers/jamie.html
+++ b/speakers/jamie.html
@@ -1,5 +1,9 @@
-<h3>Jamie Pearson</h3>
-<p>Jamie is a business leader and consultant with over a decade of experience in the legal cannabis
-industry and nearly three decades in real estate investment, finance, and celebrity partnerships.
-A well-respected expert in operations, strategic planning, leadership, and brand licensing, she
-seeks continuous improvement; not as a process, but as a way of life</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/jamie.png" alt="Jamie Pearson">
+        </div>
+        <div class="bio-text">
+<h2>Jamie Pearson</h2>
+    <p>Jamie is a business leader and consultant with over a decade of experience in the legal cannabis industry and nearly three decades in real estate investment, finance, and celebrity partnerships.</p>
+        </div>
+    </div>
