--- a/speakers/maren.html
+++ b/speakers/maren.html
@@ -1,5 +1,9 @@
-<h3>Maren Krings</h3>
-<h5>H for Hemp &amp; Confirmed &amp; A Green Art Extravaganza</h5>
-<p>Maren Krings is photographer and author and hemp industry consultant, with bases in
-Germany and Austria. Her photographic work entails documentary photography and
-visual-storytelling with focus on environmental concerns and sustainability.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/maren.png" alt="Maren Krings">
+        </div>
+        <div class="bio-text">
+<h2>Maren Krings</h2>
+    <p>Maren Krings is photographer and author and hemp industry consultant, with bases in Germany and Austria. Her photographic work entails documentary photography and visual-storytelling with focus on environmental concerns and sustainability.</p>
+        </div>
+    </div>
