--- a/speakers/norberto.html
+++ b/speakers/norberto.html
@@ -1,9 +1,10 @@
-<h3>Norberto Fischer</h3>
-<h5>Personal impact story</h5>
-<p>To what lengths would you go to give your child a better quality of life? Would you take on
-your country’s government in the court of law to protect their health and wellbeing?
-That is what one father, Norberto Fischer, and his family did for one of their daughters,
-forever changing the Brazil’s approach to CBD in the process.
-Now Norberto is a vocal advocate for CBD access in his own country and throughout Latin
-America. He recently partnered with HempMeds® Brasil to become their spokesperson. He
-also provides a regular column to the HempMeds® Brasil blog.</p>
+<div class="speaker-bio">
+        <div class="bio-image">
+            <img src="/images/norberto.png" alt="Norberto Fischer">
+        </div>
+        <div class="bio-text">
+<h2>Norberto Fischer</h2>
+    <p>To what lengths would you go to give your child a better quality of life? Would you take on your country’s government in the court of law to protect their health and wellbeing?
+That is what one father, Norberto Fischer, and his family did for one of their daughters, forever changing the Brazil’s approach to CBD in the process.</p>
+        </div>
+    </div>
