Add speaker photos

--- a/speakers/jeremy.html
+++ b/speakers/jeremy.html
@@ -1,9 +1,9 @@
 <div class="speaker-bio">
         <div class="bio-image">
-            <img src="/images/jeremy.png" alt="Jeremy Hail">
+            <img src="/images/jeremy.png" alt="Jeremy Hale">
         </div>
         <div class="bio-text">
-<h2>Jeremy Hail</h2>
+<h2>Jeremy Hale</h2>
     <p>Scholar Practitioner, Sustainable Systems Management, Remediation Consultant, Life Cycle Analysis. Jeremy Hale is an entrepreneur and independent researcher who has consulted with numerous organizations collaborating government policy and university research to support the redevelopment of communities around the world.</p>
         </div>
     </div>
