Update menu for bios

--- a/en/index.html
+++ b/en/index.html
@@ -25,7 +25,25 @@
                 <ul>
                     <li><a href="index.html" hx-get="/en/partials/home.html" hx-trigger="click" hx-target="#content">Home</a></li>
                     <li><a href="about.html" hx-get="/en/partials/about.html" hx-trigger="click" hx-target="#content">Um okkur</a></li>
-                    <li><a href="speakers.html" hx-get="/en/partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a></li>
+                    <li class="dropdown">
+                        <a href="speakers.html" hx-get="partials/speakers.html" hx-push-url="true" hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
+                                        <div class="dropdown-list">
+<a href="bozidar.html" hx-get="bios/bozidar.html" hx-trigger="click" hx-target="#content">Bozidar Radisic</a>
+<a href="clemmie.html" hx-get="bios/clemmie.html" hx-trigger="click" hx-target="#content">Clemmie James</a>
+<a href="jamie.html" hx-get="bios/jamie.html" hx-trigger="click" hx-target="#content">Jamie Pearson</a>
+<a href="jasna.html" hx-get="bios/jasna.html" hx-trigger="click" hx-target="#content">Jasna Kovac</a>
+<a href="jeff.html" hx-get="bios/jeff.html" hx-trigger="click" hx-target="#content">Jeff Lowenfels</a>
+<a href="jeremy.html" hx-get="bios/jeremy.html" hx-trigger="click" hx-target="#content">Jeremy Hale</a>
+<a href="lumir.html" hx-get="bios/lumir.html" hx-trigger="click" hx-target="#content">Lumir Ondrey Hanús</a>
+<a href="magnus.html" hx-get="bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Mangnús Þórsson</a>
+<a href="maren.html" hx-get="bios/maren.html" hx-trigger="click" hx-target="#content">Maren Krings</a>
+<a href="nando.html" hx-get="bios/nando.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
+<a href="norberto.html" hx-get="bios/norberto.html" hx-trigger="click" hx-target="#content">Norberto Fischer</a>
+<a href="pavel.html" hx-get="bios/pavel.html" hx-trigger="click" hx-target="#content">Dr.Pavel Kubú</a>
+<a href="rachel.html" hx-get="bios/rachel.html" hx-trigger="click" hx-target="#content">Dr. Rachel Knox</a>
+<a href="rene.html" hx-get="bios/rene.html" hx-trigger="click" hx-target="#content">Rene Zex</a>
+                        </div>
+                    </li>
                     <li><a href="schedule.html" hx-get="/en/partials/schedule.html" hx-trigger="click" hx-target="#content">Schedule</a></li>
                     <li><a href="venue.html" hx-get="/en/partials/venue.html" hx-trigger="click" hx-target="#content">Venue</a></li>
                     <li><a href="media.html" hx-get="/en/partials/media.html" hx-trigger="click" hx-target="#content">Media</a></li>
