--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="index.html" hx-get="/partials/home.html" hx-trigger="click" hx-target="#content">Heim</a></li>
                     <li><a href="about.html" hx-get="/partials/about.html" hx-trigger="click" hx-target="#content">Um okkur</a></li>
                     <li class="dropdown">
-                        <a href="speakers.html" hx-get="partials/speakers.html" hx-push-url="true" hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
+                        <a href="speakers.html" hx-get="partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
                             <div class="dropdown-list">
                           <a href="bozidar.html" hx-get="bios/bozidar.html" hx-trigger="click" hx-target="#content">Bozidar Radisic</a>
 <a href="clemmie.html" hx-get="bios/clemmie.html" hx-trigger="click" hx-target="#content">Clemmie James</a>
