--- a/bios/jasna.html
+++ b/bios/jasna.html
@@ -3,7 +3,24 @@
             <img src="/images/jasna.png" alt="Jasna Kovac">
         </div>
         <div class="bio-text">
-            <h2>Jasna Kovac</h2>
-    <p>Founder and current president of the MEDCA association - Association of Slovenian nurses and other health workers in the field of cannabis treatments</p>
-        </div>
+            <h2>Jasna Kovac - SI</h2>
+    <p>Jasna Kovač graduated in nursing from the Faculty of Health Sciences of the
+University of Maribor and received a master&#39;s degree in nursing from the Faculty of
+Health at the University of Ljubljana. She is employed at Slovenia&#39;s largest public
+hospital, University Medical Centre Ljubljana (UMCL), where she works as a health
+care coordinator for the Pediatric Clinic. For her master&#39;s thesis, she researched the
+experiences of parents of children who use cannabinoids or other cannabis
+preparations for treatment. One of her findings was that these individuals want
+medical doctors and nurses to be more educated on the topic in question.</p><p>
+So, to gain more knowledge, in 2020, Jasna joined the ACNA - American Cannabis
+Nurses Association, where she regularly attends online seminars and already holds
+several of their certificates. Then in 2022, together with her colleagues, she founded
+a similar association to promote the professional improvement of the knowledge of
+Slovenian nurses and other health workers about treatment with cannabis and
+cannabinoids. They named the association MEDCA - Association of Slovenian Nurses
+and other health workers in the field of cannabis treatment. Under the chairmanship
+of Jasna, MEDCA association has organized several lectures and Zoom meetings for
+healthcare workers, with local and foreign experts. They are also currently in the
+process of publishing a Handbook for Slovenian nurses who will be caring for patients
+who use cannabis and cannabis preparations for medical purposes.</p>
     </div>
