--- a/bios/jeff.html
+++ b/bios/jeff.html
@@ -3,7 +3,39 @@
             <img src="/images/jeff.png" alt="Jeff Lowenfels">
         </div>
         <div class="bio-text">
-<h2>Jeff Lowenfels</h2>
-    <p>Author of the Award-winning Teaming with Microbes: The Organic Gardener’Guide to the Soil Food Web, Teaming with Nutrients: The Organic Gardener’s Guide to Optimizing Plant Nutrition and in January of 2017, Teaming With Fungi: The Organic Grower’s Guide to Mycorrhizae, Jeff Lowenfels is one of the most humorous and entertaining lecturers on the garden lecture.</p>
+<h2>Jeff Lowenfels - AK (USA)</h2>
+    <p>Jeff Lowenfels is the author of the award winning quadrilogy known as the Teaming Series: Teaming With Microbes, Teaming With Bacteria, Teaming With Fungi and Teaming With Nutrients. He is an internationally known leader in the organic /sustainability movement and his books have been translated into almost a dozen languages ranging from French, Spanish and Dutch to Korean, Romanian and Turkish.
+
+<br>
+
+
+Jeff is well known for his highly regarded and entertaining lectures. Give him one hour and he will convert the world to organic cultivation using humor and science. He also pens the longest running garden column in North America, (47 years) and hosts a popular weekly podcast, “Teaming With Microbes.”     
+<br>
+<br>
+       
+
+Books by Jeff Lowenfels
+
+<br>
+<br>
+
+
+“<b>Teaming With Microbes,</b> The Organic Gardener's Guide To The Soil Food Web,” 
+<br>
+
+ “<b>Teaming With Nutrients,</b> The Organic Gardener’s Guide to Optimizing Plant Nutrition,” 
+<br>
+
+“<b>Teaming With Fungi,</b> The Organic Growers Guide to Mycorrhizae,” 
+<br>
+
+“<b>Teaming With Bacteria,</b> The Organic Gardener’s Guide to Endophytic Bacteria and the Rhizophagy Cycle.”
+<br>
+<br>
+
+	<b>AND</b>
+<br>
+
+“<b>DIY Autoflowering Cannabis</b>”</p>
         </div>
     </div>
