--- a/bios/jeremy.html
+++ b/bios/jeremy.html
@@ -3,7 +3,19 @@
             <img src="/images/jeremy.png" alt="Jeremy Hale">
         </div>
         <div class="bio-text">
-<h2>Jeremy Hale</h2>
-    <p>Scholar Practitioner, Sustainable Systems Management, Remediation Consultant, Life Cycle Analysis. Jeremy Hale is an entrepreneur and independent researcher who has consulted with numerous organizations collaborating government policy and university research to support the redevelopment of communities around the world.</p>
+<h2>Jeremy Hale - OH (USA)</h2>
+<p>Jeremy Hale is an entrepreneur and independent researcher who has consulted with numerous
+organizations collaborating government policy and university research to support the
+redevelopment of communities around the world. Over the past 5 years he has led global climate
+initiatives and regularly speaks on agricultural and ecological issues presenting solutions to
+ensure communal systems are climate and policy resilient. 
+These practices include soil and biomass nutrient testing and contamination remediation through
+phyto- and bio- remediation strategies to clean soils and water systems using native
+plant varieties and supporting the policy development and farmer education of
+reemerging commodities including Industrial Hemp.</p>
+    <p>Jeremy will be speaking on his experiences developing Industrial Hemp agriculturally including,
+&quot;what it is&quot;, &quot;why it&#39;s different&quot;, &quot;pro&#39;s and con&#39;s&quot;, and &quot;it&#39;s capabilities in the future&quot; based on
+published research from universities around the world and life cycle analysis of over 10
+commercially viable products.</p>
         </div>
     </div>
