--- a/speakers/jasna.html
+++ b/speakers/jasna.html
@@ -3,7 +3,7 @@
             <img src="/images/jasna.png" alt="Jasna Kovac">
         </div>
         <div class="bio-text">
-            <h2>Jasna Kovac</h2>
+            <h2>Jasna Kovac - SI</h2>
     <p>Founder and current president of the MEDCA association - Association of Slovenian nurses and other health workers in the field of cannabis treatments</p>
         </div>
     </div>
