--- a/bios/norberto.html
+++ b/bios/norberto.html
@@ -3,8 +3,8 @@
             <img src="/images/norberto.png" alt="Norberto Fischer">
         </div>
         <div class="bio-text">
-<h2>Norberto Fischer</h2>
-    <p>To what lengths would you go to give your child a better quality of life? Would you take on your country’s government in the court of law to protect their health and wellbeing?
-That is what one father, Norberto Fischer, and his family did for one of their daughters, forever changing the Brazil’s approach to CBD in the process.</p>
+<h2>Norberto Fischer - BR</h2>
+    <p>Norberto Fischer is a renowned activist and political advocate in Brazil, known for his role in promoting access to medical cannabis treatment. He is the father of Anny de Bortoli Fischer, the first Brazilian authorized by court order to import cannabidiol for medical use in 2014. Since this historic milestone, Fischer has tirelessly dedicated himself to the cause, advocating for the distribution of the medication through the Brazilian Unified Health System (SUS), for health insurance coverage of treatments, and for the legalization of cannabis cultivation and production, both by companies and NGOs and through home cultivation. His work, which resonates widely on the national and international stage, has been crucial in advancing public policies related to medical cannabis, significantly benefiting numerous families who depend on this treatment.
+</p>
         </div>
     </div>
