--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="about.html" hx-get="/partials/about.html" hx-trigger="click" hx-target="#content">Um okkur</a></li>
                     <li class="dropdown">
                         <a href="speakers.html" hx-get="partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
-                            <div class="dropdown-list">
+                            <div class="dropdown-content">
                           <a href="bozidar.html" hx-get="bios/bozidar.html" hx-trigger="click" hx-target="#content">Bozidar Radisic</a>
 <a href="clemmie.html" hx-get="bios/clemmie.html" hx-trigger="click" hx-target="#content">Clemmie James</a>
 <a href="jamie.html" hx-get="bios/jamie.html" hx-trigger="click" hx-target="#content">Jamie Pearson</a>
