--- a/speakers/norberto.html
+++ b/speakers/norberto.html
@@ -3,7 +3,7 @@
             <img src="/images/norberto.png" alt="Norberto Fischer">
         </div>
         <div class="bio-text">
-<h2>Norberto Fischer</h2>
+<h2>Norberto Fischer - BR</h2>
     <p>To what lengths would you go to give your child a better quality of life? Would you take on your country’s government in the court of law to protect their health and wellbeing?
 That is what one father, Norberto Fischer, and his family did for one of their daughters, forever changing the Brazil’s approach to CBD in the process.</p>
         </div>
