Add bios and pics for Lumir and Rene

--- a/bios/rene.html
+++ b/bios/rene.html
@@ -3,7 +3,9 @@
             <img src="/images/rene.png" alt="Rene Zex">
         </div>
         <div class="bio-text">
-<h2>Rene Zex</h2>
-    <p>Medical Cannabis & opioids Head of sales Weeco Pharmaceuticals</p>
+<h2>Rene Zex - DE</h2>
+    <p>René Zix is a distinguished Sales and Marketing leader with over 20 years of experience in the pharmaceutical industry, focusing on the medical cannabis sector. Based in Olsbrücken, Germany, René excels in market expansion, strategic partnerships, and creating effective sales strategies. He currently serves as Head of Sales at WEECO Pharma GmbH, leading national and international sales operations, driving business development, and enhancing market presence through key account management and innovative strategies.</p>
+    <p>Previously, René was Head of Sales & Marketing at WMG Pharma GmbH, where he managed CRM systems, forecasting, and budget planning while fostering relationships with associations, clinics, and healthcare professionals. He also served as Head of Sales & Medical at Canopy Growth Germany GmbH, representing the company at events and maintaining networks with industry leaders. As a Clinical Liaison Specialist at INDIVIOR Deutschland GmbH, he collaborated with specialists in pain and addiction treatment and organized educational events.</p>
+    <p>René is a certified Pharmaceutical Representative from AstraZeneca AG and a Banking Associate from Mainzer Volksbank eG. Fluent in German and English, he is a member of the German Association of Pharmaceutical Sales Professionals and actively participates in international cannabis industry conferences. René is married with four children.</p>
         </div>
     </div>
