--- a/speakers/rene.html
+++ b/speakers/rene.html
@@ -3,7 +3,7 @@
             <img src="/images/rene.png" alt="Rene Zex">
         </div>
         <div class="bio-text">
-<h2>Rene Zex</h2>
+<h2>Rene Zex - DE</h2>
     <p>Medical Cannabis & opioids Head of sales Weeco Pharmaceuticals</p>
         </div>
     </div>
