rename bozidar to correct image name

--- a/bios/bozidar.html
+++ b/bios/bozidar.html
@@ -1,6 +1,6 @@
 <div class="speaker-bio">
         <div class="bio-image">
-            <img src="/images/bodizar.png" alt="Bozidar Radisic">
+            <img src="/images/bozidar.png" alt="Bozidar Radisic">
         </div>
         <div class="bio-text">
 <h2>Bozidar Radisic - SI</h2>
