Update bios and images

--- a/bios/maren.html
+++ b/bios/maren.html
@@ -4,6 +4,8 @@
         </div>
         <div class="bio-text">
 <h2>Maren Krings</h2>
-    <p>Maren Krings is photographer and author and hemp industry consultant, with bases in Germany and Austria. Her photographic work entails documentary photography and visual-storytelling with focus on environmental concerns and sustainability.</p>
+    <p>Photographer Climate Impact Storyteller</p>
+    <br>
+    <p>As a Climate Impact Storyteller, Maren Krings leverages her expertise in photography, filmmaking, content writing, and keynote speaking to highlight the potential of hemp for climate resilience and social justice. She holds a B.F.A. in Photography from the Savannah College of Art & Design, a degree in Climate Change Studies and Environmental Science from the University of Exeter, and multiple certifications in related fields. Krings currently serves as Executive Director for FIHO, the Federation of International Hemp Organisations.</p>
         </div>
     </div>
