--- a/bios/nando.html
+++ b/bios/nando.html
@@ -4,6 +4,6 @@
         </div>
         <div class="bio-text">
 <h2>Nando Knodel - DE</h2>
-    <p>Nando holds a B.Sc. and M.Sc. in Business Administration and Economics from Hamburg & Kyoto University, with a focus on social entrepreneurship, and is the Co-Founder and Co-Managing Director of CarbonConnect GmbH and the author of the Report <a href="https://form.typeform.com/to/X9qAApP2">'Carbon in Hemp - Explained'</a> published on HempToday.</p>
+    <p>Nando holds a B.Sc. and M.Sc. in Business Administration and Economics from Hamburg & Kyoto University, with a focus on social entrepreneurship, and is the Co-Founder and Co-Managing Director of CarbonConnect GmbH. The startup is specialized in the artisanal production of biochar and an endorsed Carbon Sink Management company by Carbon Standards International, with certified projects in Zimbabwe and soon Colombia. CarbonConnect develop, train and onboard biochar projects, collect data and monitor projects to generate and sell carbon removal credits together with the project partners. Nando is also an advisor to the Federation of International Hemp Organizations (FIHO) committees for Research & Standards, as well as Sustainability. He is author of the Report 'Carbon in Hemp - Explained' published on HempToday.</p>
         </div>
     </div>
