--- a/bios/pavel.html
+++ b/bios/pavel.html
@@ -4,9 +4,7 @@
         </div>
         <div class="bio-text">
             <h2>Dr. Pavel Kubúi - CZ</h2>
-    <p>P4PTechnology or Plasma for people have developed a revolutionary blood
-plasma. Their goal is to become a technology leader in the development of
-affordable and functional blood plasma substitutes, parenteral expanders, and
-nutrition.</p>
+    <p>Dr. Kubů is an expert in medical informatics and addictology, specializing in digital healthcare.</p>
+    <p>He has formerly held a position at the Intel Corporation and was the Founding CEO of the International Cannabis and Cannabinoids Institute (ICCI) in Prague. Dr. Kubů is a graduate of Charles University in Prague, earning his Doctor of Medicine degree in General Medicine with a focus on disease prevention. Since the beginning of the 2. millennium he is actively contributing to cannabis access education, lobby, research and development on national, EU and international level. Currently serves as Chief Medical Officer in P4P (Plasma 4 people ) a.s. and Chief Information Officer in Healchain GmbH. Dr. Kubu has been elected as chairman of Patient association for cannabis treatment KOPAC and Czech national forum for eHealth.</p>
         </div>
     </div>
