--- a/bios/rachel.html
+++ b/bios/rachel.html
@@ -3,7 +3,10 @@
             <img src="/images/rachel.png" alt="Dr. Rachel Knox">
         </div>
         <div class="bio-text">
-<h2>Dr. Rachel Knox</h2>
-    <p>Dr. Rachel Knox MD, MBA is a certified Cannabinoid Medicine specialist who received her medical and business degrees from Tufts University after completing her undergraduate studies at Duke.</p>
+<h2>Dr. Rachel Knox - OR (USA)</h2>
+    <p>Endocannabinologist & Certified Cannabinoid Medicine Specialist at Doctors Knox, Inc.; Chair Oregon Cannabis Commission</p>
+    <p>Dr. Rachel Knox, MD, MBA is the creator and Chair of the Board of Governors of the Cannabis Health Equity Movement (CHEM)®, a non-equity joint venture between 7 member organizations aligned in one mission: to realize health equity for all people beginning with communities disproportionately impacted by cannabis prohibition and the War on Drugs. Dr. Rachel serves as the President of CHEM Allyance, the movement's 501(c)(3) charitable nonprofit, and is Board Chair/President of ACHEM, the Association for Cannabis Health Equity and Medicine.</p>
+    <p>Specializing in cannabis and psychedelic health equity, cannabinoid medicine, and endocannabinology, Dr. Rachel is a thought leader, advocate, public health and policy consultant, historian, and public speaker. She has a B.A. from Duke University in African and African American studies, received her medical and business degrees from Tufts School of Medicine, and completed residency training in family and integrative medicine. </p>
+    <p>Dr. Rachel is committed to local and global transformation, having served Oregon as the immediate past chair of the Oregon Cannabis Commission, and immediate past Vice Chair of Oregon's Psilocybin Advisory Board; and as a former long-term member of Portland's Cannabis Policy Oversight Team, and current advisory board member to Oregon State University Global Hemp Innovation Center.  She is also a member of several national boards including Council for Federal Cannabis Regulation (CFCR) and founding member of Cannabis Regulators of Color Coalition (CRCC).</p>
         </div>
     </div>
