--- a/speakers/lumir.html
+++ b/speakers/lumir.html
@@ -4,6 +4,6 @@
         </div>
         <div class="bio-text">
 <h2>Dr. Lumír Ondřej Hanuš - CZ</h2>
-    <p>Professor Lumír Hanuš, a native of the Czech Republic, is an expert analytical chemist and a leading authority in the field of medical cannabis research at the Hebrew University of Jerusalem. His award-winning research serves as the basis for much of what we know about the plant today.</p>
+    <p>Dr. Lumír Hanuš, a native of the Czech Republic, is an expert analytical chemist and a leading authority in the field of medical cannabis research at the Hebrew University of Jerusalem. His award-winning research serves as the basis for much of what we know about the plant today.</p>
         </div>
     </div>
