--- a/speakers/rachel.html
+++ b/speakers/rachel.html
@@ -3,7 +3,7 @@
             <img src="/images/rachel.png" alt="Dr. Rachel Knox">
         </div>
         <div class="bio-text">
-<h2>Dr. Rachel Knox</h2>
+<h2>Dr. Rachel Knox - OR (USA)</h2>
     <p>Dr. Rachel Knox MD, MBA is a certified Cannabinoid Medicine specialist who received her medical and business degrees from Tufts University after completing her undergraduate studies at Duke.</p>
         </div>
     </div>
