--- a/en/index.html
+++ b/en/index.html
@@ -38,6 +38,7 @@
 <a href="magnus.html" hx-get="/bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Mangnús Þórsson</a>
 <a href="maren.html" hx-get="/bios/maren.html" hx-trigger="click" hx-target="#content">Maren Krings</a>
 <a href="nando.html" hx-get="/bios/nando.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
+<a href="nando.html" hx-get="/bios/neil.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
 <a href="norberto.html" hx-get="/bios/norberto.html" hx-trigger="click" hx-target="#content">Norberto Fischer</a>
 <a href="pavel.html" hx-get="/bios/pavel.html" hx-trigger="click" hx-target="#content">Dr.Pavel Kubú</a>
 <a href="rachel.html" hx-get="/bios/rachel.html" hx-trigger="click" hx-target="#content">Dr. Rachel Knox</a>
