--- a/speakers/magnus.html
+++ b/speakers/magnus.html
@@ -3,7 +3,7 @@
             <img src="/images/magnus.png" alt="Mangnús Þórsson">
         </div>
         <div class="bio-text">
-<h2>Dr. Mangnús Þórsson</h2>
+<h2>Dr. Mangnús Þórsson - IS</h2>
     <p>Magnus Thorsson, PhD, is a professor of entrepreneurship at Johnson & Wales University, celebrated for launching the world's first Bachelor of Science degree in Cannabis Entrepreneurship in 2021. </p>
         </div>
     </div>
