--- a/speakers/neil.html
+++ b/speakers/neil.html
@@ -3,7 +3,7 @@
             <img src="/images/neil.png" alt="Neil Woods">
         </div>
         <div class="bio-text">
-<h2>Neil Woods</h2>
+<h2>Neil Woods - UK</h2>
     <p>Author, former UK police officer</p>
         </div>
     </div>
