--- a/bios/magnus.html
+++ b/bios/magnus.html
@@ -3,7 +3,7 @@
             <img src="/images/magnus.png" alt="Magnús Þórsson">
         </div>
         <div class="bio-text">
-<h2>Dr. Magnnús Þórsson - IS</h2>
-    <p>Magnus Thorsson, PhD, is a professor of entrepreneurship at Johnson & Wales University, celebrated for launching the world's first Bachelor of Science degree in Cannabis Entrepreneurship in 2021. This innovative program combines cannabis science with business acumen, equipping students for various roles in the cannabis industry, including cultivation, value creation, and retail. Dr. Thorsson holds a PhD from Iowa State University and an MAT from Bennington College, and his research spans behavioural economics and consumer preferences, with a focus on consumer motivations for cannabis consumption. His entrepreneurial ventures include owning a ski lodge in Vermont and founding an edutainment company for senior leisure travellers.</p>
+<h2>Dr. Magnús Þórsson - IS</h2>
+    <p>Magnús Thorsson, PhD, is a professor of entrepreneurship at Johnson & Wales University, celebrated for launching the world's first Bachelor of Science degree in Cannabis Entrepreneurship in 2021. This innovative program combines cannabis science with business acumen, equipping students for various roles in the cannabis industry, including cultivation, value creation, and retail. Dr. Thorsson holds a PhD from Iowa State University and an MAT from Bennington College, and his research spans behavioural economics and consumer preferences, with a focus on consumer motivations for cannabis consumption. His entrepreneurial ventures include owning a ski lodge in Vermont and founding an edutainment company for senior leisure travellers.</p>
         </div>
     </div>
