--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <ul>
                     <li><a href="index.html" hx-get="/partials/home.html" hx-trigger="click" hx-target="#content">Heim</a></li>
                     <li class="dropdown">
-                      <a href="about.html" hx-get="/partials/about-conference.html" hx-trigger="click" hx-target="#content">Um okkur</a>
+                      <a href="conference.html" hx-get="/partials/about-conference.html" hx-trigger="click" hx-target="#content">Um okkur</a>
                         <div class="dropdown-content">
-                          <a href="conference.html" hx-get="/partials/about-conference.html" hx-trigger="click" hx-target="#content">Um Ráðstefnuna</a>
-                          <a href="conference.html" hx-get="/partials/about-hampfelagid.html" hx-trigger="click" hx-target="#content">Um Hampfelagid</a>
+                          <a href="conference.html" hx-get="/partials/about-conference.html" hx-trigger="click" hx-target="#content">Ráðstefnuna</a>
+                          <a href="hampfelagid.html" hx-get="/partials/about-hampfelagid.html" hx-trigger="click" hx-target="#content">Hampfelagid</a>
                         </div>      
                     </li>
                     <li class="dropdown">
-                        <a href="speakers.html" hx-get="partials/speakers.html" hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
+                        <a href="speakers.html" hx-get="partials/speakers.html" hx-trigger="click" hx-target="#content">Fram Koma</a>                        <div class="dropdown-content">
                             <div class="dropdown-content">
                           <a href="bozidar.html" hx-get="bios/bozidar.html" hx-trigger="click" hx-target="#content">Bozidar Radisic</a>
 <a href="jamie.html" hx-get="bios/jamie.html" hx-trigger="click" hx-target="#content">Jamie Pearson</a>
@@ -40,7 +40,7 @@
 <a href="jeff.html" hx-get="bios/jeff.html" hx-trigger="click" hx-target="#content">Jeff Lowenfels</a>
 <a href="jeremy.html" hx-get="bios/jeremy.html" hx-trigger="click" hx-target="#content">Jeremy Hale</a>
 <a href="lumir.html" hx-get="bios/lumir.html" hx-trigger="click" hx-target="#content">Lumir Ondrey Hanús</a>
-<a href="magnus.html" hx-get="bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Mangnús Þórsson</a>
+<a href="magnus.html" hx-get="bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Magnús Þórsson</a>
 <a href="maren.html" hx-get="bios/maren.html" hx-trigger="click" hx-target="#content">Maren Krings</a>
 <a href="nando.html" hx-get="bios/nando.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
 <a href="nando.html" hx-get="bios/neil.html" hx-trigger="click" hx-target="#content">Niel Woods</a>
