--- a/en/index.html
+++ b/en/index.html
@@ -25,10 +25,10 @@
                 <ul>
                     <li><a href="index.html" hx-get="/en/partials/home.html" hx-trigger="click" hx-target="#content">Home</a></li>
                     <li class="dropdown">
-                      <a href="about.html" hx-get="/en/partials/about-conference.html" hx-trigger="click" hx-target="#content">Um okkur</a>
+                      <a href="conference.html" hx-get="/en/partials/about-conference.html" hx-trigger="click" hx-target="#content">About us</a>
                         <div class="dropdown-content">
-                          <a href="conference.html" hx-get="/en/partials/about-conference.html" hx-trigger="click" hx-target="#content">Um Ráðstefnuna</a>
-                          <a href="conference.html" hx-get="/en/partials/about-hampfelagid.html" hx-trigger="click" hx-target="#content">Um Hampfelagid</a>
+                          <a href="conference.html" hx-get="/en/partials/about-conference.html" hx-trigger="click" hx-target="#content">The Conference</a>
+                          <a href="hampfelagid.html" hx-get="/en/partials/about-hampfelagid.html" hx-trigger="click" hx-target="#content">Hampfélagið</a>
                         </div>      
                     </li>
                     <li class="dropdown">
@@ -40,7 +40,7 @@
 <a href="jeff.html" hx-get="/bios/jeff.html" hx-trigger="click" hx-target="#content">Jeff Lowenfels</a>
 <a href="jeremy.html" hx-get="/bios/jeremy.html" hx-trigger="click" hx-target="#content">Jeremy Hale</a>
 <a href="lumir.html" hx-get="/bios/lumir.html" hx-trigger="click" hx-target="#content">Lumir Ondrey Hanús</a>
-<a href="magnus.html" hx-get="/bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Mangnús Þórsson</a>
+<a href="magnus.html" hx-get="/bios/magnus.html" hx-trigger="click" hx-target="#content">Dr. Magnús Þórsson</a>
 <a href="maren.html" hx-get="/bios/maren.html" hx-trigger="click" hx-target="#content">Maren Krings</a>
 <a href="nando.html" hx-get="/bios/nando.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
 <a href="nando.html" hx-get="/bios/neil.html" hx-trigger="click" hx-target="#content">Nando Knodel</a>
